--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: --草堂春睡足--窗外日迟迟--
+title: “草堂春睡足，窗外日迟迟”
 description: Alice Megatron's Workshop
 baseurl: "" 
 #change the baseurl to "" if you are using it as your user GitHub Pages
